--- a/package.json
+++ b/package.json
@@ -23,9 +23,13 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@types/express-session": "^1.18.1",
+        "crypto": "^1.0.1",
         "dotenv": "^16.4.7",
         "express": "^4.21.2",
+        "express-session": "^1.18.1",
         "express-validator": "^7.2.1",
+        "googleapis": "^146.0.0",
         "pre-commit": "^1.2.2",
         "rimraf": "^6.0.1",
         "supertest": "^7.0.0"
