--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "express-session": "^1.18.1",
         "express-validator": "^7.2.1",
         "googleapis": "^146.0.0",
+        "jsonwebtoken": "^9.0.2",
         "pre-commit": "^1.2.2",
         "rimraf": "^6.0.1",
         "supertest": "^7.0.0"
