Refactor index.ts according to previous change

--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@types/cors": "^2.8.17",
         "@types/express-session": "^1.18.1",
+        "cors": "^2.8.5",
         "crypto": "^1.0.1",
         "dotenv": "^16.4.7",
         "express": "^4.21.2",
